assets/css/shared.css
/* ... */
  .green .reports a[href]:hover,
  .green .reports a[href]:active,
  .green .reports a[href]:focus {
    color: rgb(48, 217, 101); /* @green */
  }
  .yellow  .reports a[href]:hover,
  .yellow .reports a[href]:active,
  .yellow .reports a[href]:focus {
    color: rgb(230, 189, 0); /* @dark-yellow */
  }
  .red .reports a[href]:hover,
  .red .reports a[href]:active,
  .red .reports a[href]:focus {
    color: rgb(239, 20, 93); /* @red */
  }



  /* =Home
  ----------------------------------------------- */
  @media (min-width: 20em) {
    main.home > h1:first-child {
      margin-top: 0;
      position: absolute;
      top: 2em;
      z-index: 2; /* Just above the main navigation */
      color: white;
    }
    main.home h1:first-child + p {
      margin-top: 0;
    }
  }
  @media (min-height: 50em) {
    main.home > h1:first-child {
      top: 6em;
    }
  }
  @media (min-width: 70em) and (min-aspect-ratio: 1/1) {
    main.home > h1:first-child {
      top: 30vh;
    }
  }


  .featured-project-list,
  .featured-project-list li {
    /* @reset-list */
    list-style: none;
    margin-left: 0;
    padding-left: 0;
  }
  .featured-project-list {
    margin-bottom: 3em;
  }
  .featured-project-list li h2 {
    font-family: inherit;
    font-weight: inherit;
    font-style: italic;

    /* @header-3 */
    font-size: 1.6363636364em; /* 36px / 22px */
    line-height: 1.2222222222; /* 44px / 36px */

    padding-bottom: 0.1527777778em; /* (44px / 36px) / 8 */
    margin: 0;
    text-decoration: underline;
  }
  .tangerine .featured-project-list li h2 {
    color: rgb(255, 80, 26); /* @tangerine */
  }
  .orange .featured-project-list li h2 {
    color: rgb(249, 132, 12); /* @orange */
  }
  .purple .featured-project-list li h2 {
    color: rgb(168, 46, 255); /* @purple */
  }
  .blue .featured-project-list li h2 {
    color: rgb(0, 157, 255); /* @blue */
  }
  .teal .featured-project-list li h2 {
    color: rgb(0, 240, 200); /* @teal */
  }
  .green .featured-project-list li h2 {
    color: rgb(48, 217, 101); /* @green */
  }
  .yellow .featured-project-list li h2 {
    color: rgb(255, 214, 13); /* @yellow */
  }
  .red .featured-project-list li h2 {
    color: rgb(239, 20, 93); /* @red */
  }
  .featured-project-list li h2 span {
    color: white;
  }

  .featured-project-list li p {
    font-size: 0.8181818182em; /* 18px / 22px */
    line-height: 1.2222222222; /* 22px / 18px */
    margin-top: 0.375em;
    margin-bottom: 0;
    max-width: 26em;
  }
  .featured-project-list li .more {
    margin-top: 1.2222222222em;
    font-style: italic;
  }
  .featured-project-list a {
    color: inherit;
    text-decoration: inherit;
    font-style: inherit;
  }

  /* Recent */
  .recent {
    margin-top: 3em;
    margin-bottom: 4.5em;
    border-top: 0.1818181818em solid;
  }
  @media (min-width: 70em) {
    .recent {
      margin-top: 6em;
    }
  }
  .recent h1 {
    margin-bottom: 0;
  }
  .tangerine .recent {
    border-color: rgb(249, 132, 12); /* @orange */
  }
  .orange .recent {
    border-color: rgb(249, 132, 12); /* @orange */
  }
  .purple .recent {
    border-color: rgb(168, 46, 255); /* @purple */
  }
  .blue .recent {
    border-color: rgb(0, 157, 255); /* @blue */
  }
  .teal .recent {
    border-color: rgb(0, 240, 200); /* @teal */
  }
  .green .recent {
    border-color: rgb(48, 217, 101); /* @green */
  }
  .yellow .recent {
    border-color: rgb(255, 214, 13); /* @yellow */
  }
  .red .recent {
    border-color: rgb(239, 20, 93); /* @red */
  }





  /* =Home
  ----------------------------------------------- */

  @media (max-width: 25em), (max-height: 25em) {
    header.home ~ main > h1:first-child {
      top: 2.5em;
      font-size: 2em;
    }
  }

  header.home {
    position: static;
    height: 0;
    min-height: 0;
    padding: 0;
  }
  header.home:before {
    display: none;
  }
  header.home > h2 {
    top: 1.5em;
    left: 1.5em;
  }
  header.home > ul {
    top: 1.5em;
  }
  @media (min-width: 70em) {
    header.home > h2 {
      top: 2.2727272727em; /* 50px / 22px */
      left: 4em; /* 88px / 22px */
    }
    header.home > ul {
      top: 2.2727272727em; /* 50px / 22px */
    }
  }
  header.home > h2,
  header.home > .nav,
  header.home + main > h1:first-child {
    position: absolute;
  }
  header.home.fixed > h2,
  header.home.fixed > .nav,
  header.home.fixed + main > h1:first-child {
    position: fixed;
  }

  .featured-project-list > li a div {
    transition: opacity 0.2s;
  }
  .featured-project-list > li.hidden-text a div {
    opacity: 0;
  }
  .featured-project-list > li.hidden-text a:hover div,
  .featured-project-list > li.hidden-text a:active div,
  .featured-project-list > li.hidden-text a:focus div {
    opacity: 1;
  }

  main.home {
    padding-top: 0;
    margin-top: 0;
  }
  .featured-project-list {
    margin-top: 0;
    max-width: none;
  }
  .featured-project-list > li {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    margin-left: -1.5em; /* main padding */
    margin-right: -1.5em;
  }
  .featured-project-list > li + li {
    margin-top: 0;
  }
  .featured-project-list > li a {
    display: block;
    padding: 1.5em;
    box-sizing: border-box;
    position: relative;
    padding-top: 45vh;
    padding-bottom: 5vh;

    z-index: 1;
    color: white;
  }
  .featured-project-list > li a div {
    position: relative;
    z-index: 1;
  }
  .featured-project-list a h1 {
    margin-bottom: 0.5em;
  }
  .featured-project-list a[href]:hover,
  .featured-project-list a[href]:active,
  .featured-project-list a[href]:focus {
    color: white;
  }

  .featured-project-list a .meta ul {
    color: inherit;
    margin-bottom: 0;
  }
  .featured-project-list a .more {
    color: rgb(0, 240, 200); /* @teal */
    text-align: right;

    max-width: none;
  }
  .tangerine .featured-project-list a .more {
    color: rgb(255, 80, 26); /* @tangerine */
  }
/* ... */

